Bug 1782366 - part1 : don't use space in the pattern. r=padenot

Although standard ftyp type contains spaces sometimes, in reality, not all of files follow this rule and they sometime skip the space.

In order to increase the tolerance of parsing, we should allow ftyp without having spaces but with correct name. Eg. "M4A " v.s. "M4A".

Differential Revision: https://phabricator.services.mozilla.com/D157684